[gd_scene load_steps=18 format=3 uid="uid://cunitmhjmor4t"]

[ext_resource type="Script" path="res://scripts/spells/fireball.gd" id="1_xhdr4"]
[ext_resource type="Texture2D" uid="uid://b1360w2r0anxr" path="res://art/spells/fireball_anim.png" id="2_6cebx"]
[ext_resource type="PackedScene" uid="uid://v0aatipnaxbi" path="res://art/particles/fireball_explode.tscn" id="2_rwb02"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_roufs"]
friction = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bmfga"]
radius = 24.0208

[sub_resource type="CircleShape2D" id="CircleShape2D_c3tof"]
radius = 177.003

[sub_resource type="CircleShape2D" id="CircleShape2D_0d406"]
radius = 114.0

[sub_resource type="CircleShape2D" id="CircleShape2D_t4vyy"]
radius = 91.1373

[sub_resource type="Animation" id="Animation_wn6at"]
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_8sbip"]
resource_name = "Travel"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ekoet"]
_data = {
"RESET": SubResource("Animation_wn6at"),
"Travel": SubResource("Animation_8sbip")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cnlu5"]
animation = &"Travel"
use_custom_timeline = true
timeline_length = 1.0
stretch_time_scale = true
start_offset = 0.0
loop_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_um3m1"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_to3ae"]
states/Travel/node = SubResource("AnimationNodeAnimation_cnlu5")
states/Travel/position = Vector2(360.5, 100.5)
transitions = ["Start", "Travel", SubResource("AnimationNodeStateMachineTransition_um3m1")]

[sub_resource type="Curve" id="Curve_ak1ps"]
max_value = 200.0
_data = [Vector2(0, 1), 0.0, 91.3207, 0, 1, Vector2(0.662921, 61.5385), 277.632, 277.632, 0, 0, Vector2(0.960674, 200), 465.022, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_kjljm"]
interpolation_mode = 2
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3ctdn"]
gradient = SubResource("Gradient_kjljm")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.1, 0.2)
metadata/_snap_enabled = true

[node name="Fireball" type="RigidBody2D"]
collision_layer = 16416
collision_mask = 8462
physics_material_override = SubResource("PhysicsMaterial_roufs")
gravity_scale = 0.0
custom_integrator = true
contact_monitor = true
max_contacts_reported = 5
linear_damp_mode = 1
angular_damp_mode = 1
script = ExtResource("1_xhdr4")

[node name="FireballCollision" type="CollisionShape2D" parent="."]
scale = Vector2(0.5, 0.5)
shape = SubResource("CircleShape2D_bmfga")

[node name="NoiseArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 512

[node name="NoiseAreaCollision" type="CollisionShape2D" parent="NoiseArea"]
scale = Vector2(0.5, 0.5)
shape = SubResource("CircleShape2D_c3tof")

[node name="SmallExplosion" type="Area2D" parent="."]
top_level = true
collision_layer = 33
collision_mask = 11

[node name="SmallExplosionCollision" type="CollisionShape2D" parent="SmallExplosion"]
scale = Vector2(0.25, 0.25)
shape = SubResource("CircleShape2D_0d406")

[node name="BigExplosion" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="BigExplosionCollision" type="CollisionShape2D" parent="BigExplosion"]
scale = Vector2(0.5, 0.5)
shape = SubResource("CircleShape2D_t4vyy")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1, 1.044)
texture = ExtResource("2_6cebx")
hframes = 5
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ekoet")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_to3ae")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 2

[node name="CPUParticles2D" parent="." instance=ExtResource("2_rwb02")]
top_level = false
visibility_layer = 1023
z_index = 1
scale = Vector2(0.5, 0.5)
lifetime = 0.6
lifetime_randomness = 0.0
direction = Vector2(0, 0)
initial_velocity_min = 30.0
initial_velocity_max = 180.0
linear_accel_min = 80.0
linear_accel_max = 130.0
scale_amount_min = 3.0
scale_amount_max = 14.0
anim_speed_curve = SubResource("Curve_ak1ps")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-1.19209e-07, 0)
scale = Vector2(2.95313, 2.875)
energy = 0.25
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.184314)
texture = SubResource("GradientTexture2D_3ctdn")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
